--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>タグリファレンス</title>
 </head>
 <body>
   <table>
+    <tr>
+      <th>タグ（名称の説明）</th>
+      <th>コード例</th>
+      <th>表示</th>
+      <th>補足</th>
+    </tr>
     <tr>
       <th>&lt;h1&gt;</th>
       <td>
@@ -18,6 +25,7 @@
           </tr>
         </table>
       </td>
+      
     </tr>
   </table>
 </html>
