--- a/index.html
+++ b/index.html
@@ -9,23 +9,32 @@
 </head>
 <body>
   <table>
-    <tr>
-      <th>タグ（名称の説明）</th>
-      <th>コード例</th>
-      <th>表示</th>
-      <th>補足</th>
+    <!-- ヘッダー -->
+    <tr class="header">
+      <th class="header">タグ（名称の説明）</th>
+      <th class="header">コード例</th>
+      <th class="header">表示</th>
+      <th class="header">補足</th>
     </tr>
+    <!-- コンテンツ -->
     <tr>
-      <th>&lt;h1&gt;</th>
+      <th>
+        &lt;h●&gt;<br>headerタグ
+      </th>
       <td>
-        <table>
-          <tr>
-            <th>テーブルの中の</th>
-            <td>テーブル</td>
-          </tr>
-        </table>
+        <pre><code>&lt;h1&gt;大見出し&lt;/h1&gt;<br>&lt;h2&gt;小見出し&lt;/h2&gt;<br>&lt;h3&gt;小見出し&lt;/h3&gt;<br>&lt;h4&gt;小見出し&lt;/h4&gt;<br>&lt;h5&gt;小見出し&lt;/h5&gt;<br>&lt;h6&gt;小見出し&lt;/h6&gt;</code></pre>
       </td>
-      
+      <td>
+        <h1>大見出し</h1>
+        <h2>小見出し</h2>
+        <h3>小見出し</h3>
+        <h4>小見出し</h4>
+        <h5>小見出し</h5>
+        <h6>小見出し</h6>
+      </td>
+      <td>
+
+      </td>
     </tr>
   </table>
 </html>
