--- a/index.html
+++ b/index.html
@@ -19,21 +19,36 @@
     <!-- コンテンツ -->
     <tr>
       <th>
-        &lt;h●&gt;<br>headerタグ
+        &lt;h●&gt;<br>Headingタグ
       </th>
       <td>
-        <pre><code>&lt;h1&gt;大見出し&lt;/h1&gt;<br>&lt;h2&gt;小見出し&lt;/h2&gt;<br>&lt;h3&gt;小見出し&lt;/h3&gt;<br>&lt;h4&gt;小見出し&lt;/h4&gt;<br>&lt;h5&gt;小見出し&lt;/h5&gt;<br>&lt;h6&gt;小見出し&lt;/h6&gt;</code></pre>
+        <pre><code>&lt;h1&gt;1大見出し&lt;/h1&gt;<br>&lt;h2&gt;2小見出し&lt;/h2&gt;<br>&lt;h3&gt;3小見出し&lt;/h3&gt;<br>&lt;h4&gt;4小見出し&lt;/h4&gt;<br>&lt;h5&gt;5小見出し&lt;/h5&gt;<br>&lt;h6&gt;6小見出し&lt;/h6&gt;</code></pre>
       </td>
       <td>
-        <h1>大見出し</h1>
-        <h2>小見出し</h2>
-        <h3>小見出し</h3>
-        <h4>小見出し</h4>
-        <h5>小見出し</h5>
-        <h6>小見出し</h6>
+        <h1>1大見出し</h1>
+        <h2>2小見出し</h2>
+        <h3>3小見出し</h3>
+        <h4>4小見出し</h4>
+        <h5>5小見出し</h5>
+        <h6>6小見出し</h6>
       </td>
       <td>
-
+        h1 ~ h6の使い方については<a href="">こちら</a>
+      </td>
+    </tr>
+    <tr>
+      <th>
+        &lt;p&gt;<br>Paragraphタグ
+      </th>
+      <td>
+        <pre><code>&lt;p&gt;段落を構成します。&lt;/p&gt;&lt;p&gt;自動的に改行されます。&lt;/p&gt;</code></pre>
+      </td>
+      <td>
+        <p>段落を構成します。</p>
+        <p>自動的に改行されます。</p>
+      </td>
+      <td>
+        
       </td>
     </tr>
   </table>
