--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
         <pre><code>&lt;h1&gt;1大見出し&lt;/h1&gt;<br>&lt;h2&gt;2小見出し&lt;/h2&gt;<br>&lt;h3&gt;3小見出し&lt;/h3&gt;<br>&lt;h4&gt;4小見出し&lt;/h4&gt;<br>&lt;h5&gt;5小見出し&lt;/h5&gt;<br>&lt;h6&gt;6小見出し&lt;/h6&gt;</code></pre>
       </td>
       <td>
-        <h1>1大見出し</h1>
-        <h2>2小見出し</h2>
-        <h3>3小見出し</h3>
-        <h4>4小見出し</h4>
-        <h5>5小見出し</h5>
-        <h6>6小見出し</h6>
+        <table>
+          <tr>
+            <td><h1>1大見出し</h1></td>
+            <td><h2>2大見出し</h2></td>
+            <td><h3>3大見出し</h3></td>
+            <td><h4>4大見出し</h4></td>
+            <td><h5>5大見出し</h5></td>
+            <td><h6>6大見出し</h6></td>
+          </tr>
+        </table>
       </td>
       <td>
-        h1 ~ h6の使い方については<a href="">こちら</a>
+        ※デザインの都合上、表示は横に並べています。<br>h1 ~ h6の使い方については<a href="">こちら</a>
       </td>
     </tr>
     <tr>
