--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- ヘッダー -->
     <tr class="header">
       <th class="header">タグ（名称の説明）</th>
+      <th class="header">主な属性値</th>
       <th class="header">コード例</th>
       <th class="header">表示</th>
       <th class="header">補足</th>
@@ -21,6 +22,7 @@
       <th>
         &lt;h●&gt;<br>Headingタグ
       </th>
+      <td></td>
       <td>
         <pre><code>&lt;h1&gt;1大見出し&lt;/h1&gt;<br>&lt;h2&gt;2小見出し&lt;/h2&gt;<br>&lt;h3&gt;3小見出し&lt;/h3&gt;<br>&lt;h4&gt;4小見出し&lt;/h4&gt;<br>&lt;h5&gt;5小見出し&lt;/h5&gt;<br>&lt;h6&gt;6小見出し&lt;/h6&gt;</code></pre>
       </td>
@@ -40,10 +42,12 @@
         ※デザインの都合上、表示は横に並べています。<br>h1 ~ h6の使い方については<a href="">こちら</a>
       </td>
     </tr>
+
     <tr>
       <th>
         &lt;p&gt;<br>Paragraphタグ
       </th>
+      <td></td>
       <td>
         <pre><code>&lt;p&gt;段落を構成します。&lt;/p&gt;&lt;p&gt;自動的に改行されます。&lt;/p&gt;</code></pre>
       </td>
