--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <th class="header">表示</th>
       <th class="header">補足</th>
     </tr>
-    <!-- コンテンツ -->
+    <!-- ひな形 -->
     <tr>
       <th class="name">&lt; &gt;<br>タグ</th>
       <td class="attribute"></td>
@@ -27,6 +27,7 @@
       <td class="view"></td>
       <td class="supple"></td>
     </tr>
+    <!-- コンテンツ -->
     <tr>
       <th class="name">&lt;a&gt;<br>anchorタグ</th>
       <td class="attribute">href</td>
@@ -38,6 +39,19 @@
       </td>
       <td class="supple"></td>
     </tr>
+
+      <tr>
+        <th class="name">&lt;abbr&gt;<br>abbreviationタグ</th>
+        <td class="attribute">title</td>
+        <td class="code">
+            <pre><code>&lt;abbr title="HyperText Markup Language">HTML&lt;/abbr></code></pre>
+        </td>
+        <td class="view">
+            <abbr title="HyperText Markup Language">HTML</abbr>
+        </td>
+        <td class="supple">単語にカーソルを置いてしばらく待ってください。<br>title属性を用いることで略語の説明が可能。</td>
+      </tr>
+
     <tr>
       <th>
         &lt;h●&gt;<br>Headingタグ
