--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
         <td class="supple">単語にカーソルを置いてしばらく待ってください。<br>title属性を用いることで略語の説明が可能。</td>
       </tr>
 
+      <tr>
+        <th class="name">&lt;b&gt;</th>
+        <td class="attribute"></td>
+        <td class="code">
+            <pre><code>&lt;b>見かけ上の太字&lt;/b></code></pre>
+        </td>
+        <td class="view"><b>見かけ上の太字</b></td>
+        <td class="supple">最終手段。見出しはhタグ。意味の強勢はemタグ、さらに重要な強調はstrongタグを使用。</td>
+      </tr>
+
     <tr>
       <th>
         &lt;h●&gt;<br>Headingタグ
