--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
         <td class="supple">pタグで入れ子にし、ブロックボックスでサイトの引用を表す。文章中などでインラインとして引用を表したい場合はqタグを使用</td>
       </tr>
 
+      <tr>
+        <th class="name">&lt;br&gt;<br>breakタグ</th>
+        <td class="attribute"></td>
+        <td class="code">ここで&lt;br>改行&lt;/br>
+        </td>
+        <td class="view">
+          ここで<br>改行
+      </td>
+        <td class="supple"></td>
+      </tr>
+
     <tr>
       <th>
         &lt;h●&gt;<br>Headingタグ
