pre,code delete

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       <th class="name">&lt; &gt;<br>タグ</th>
       <td class="attribute"></td>
       <td class="code">
-        <pre><code></code></pre>
       </td>
       <td class="view"></td>
       <td class="supple"></td>
@@ -34,7 +33,7 @@
       <th class="name">&lt;a&gt;<br>anchorタグ</th>
       <td class="attribute">href</td>
       <td class="code">
-        <pre><code>&lt;a href="https://manablog.org/" target="_blank"&gt;マナブブログへ（笑）！&lt;/a&gt;</code></pre>
+        &lt;a href="https://manablog.org/" target="_blank"&gt;マナブブログへ（笑）！&lt;/a&gt;
       </td>
       <td class="view">
         <a href="https://manablog.org/" target="_blank">マナブブログへ（笑）！</a>
@@ -46,7 +45,7 @@
       <th class="name">&lt;abbr&gt;<br>abbreviation＝"略語"</th>
       <td class="attribute">title</td>
       <td class="code">
-        <pre><code>&lt;abbr title="HyperText Markup Language">HTML&lt;/abbr></code></pre>
+        &lt;abbr title="HyperText Markup Language">HTML&lt;/abbr>
       </td>
       <td class="view">
         <abbr title="HyperText Markup Language">HTML</abbr>
@@ -58,7 +57,7 @@
       <th class="name">&lt;b&gt;</th>
       <td class="attribute"></td>
       <td class="code">
-        <pre><code>&lt;b>見かけ上の太字&lt;/b></code></pre>
+        &lt;b>見かけ上の太字&lt;/b>
       </td>
       <td class="view"><b>見かけ上の太字</b></td>
       <td class="supple">最終手段。見出しはhタグ。意味の強勢はemタグ、さらに重要な強調はstrongタグを使用。</td>
@@ -152,7 +151,7 @@
       </th>
       <td></td>
       <td>
-        <pre><code>&lt;h1&gt;1大見出し&lt;/h1&gt;<br>&lt;h2&gt;2小見出し&lt;/h2&gt;<br>&lt;h3&gt;3小見出し&lt;/h3&gt;<br>&lt;h4&gt;4小見出し&lt;/h4&gt;<br>&lt;h5&gt;5小見出し&lt;/h5&gt;<br>&lt;h6&gt;6小見出し&lt;/h6&gt;</code></pre>
+        &lt;h1&gt;1大見出し&lt;/h1&gt;<br>&lt;h2&gt;2小見出し&lt;/h2&gt;<br>&lt;h3&gt;3小見出し&lt;/h3&gt;<br>&lt;h4&gt;4小見出し&lt;/h4&gt;<br>&lt;h5&gt;5小見出し&lt;/h5&gt;<br>&lt;h6&gt;6小見出し&lt;/h6&gt;
       </td>
       <td>
         <table>
@@ -189,7 +188,7 @@
       </th>
       <td></td>
       <td>
-        <pre><code>&lt;p&gt;段落を構成します。&lt;/p&gt;&lt;p&gt;自動的に改行されます。&lt;/p&gt;</code></pre>
+        &lt;p&gt;段落を構成します。&lt;/p&gt;&lt;p&gt;自動的に改行されます。&lt;/p&gt;
       </td>
       <td>
         <p>段落を構成します。</p>
