--- a/index.html
+++ b/index.html
@@ -118,16 +118,30 @@
     </tr>
 
     <tr>
-      <th class="name">&lt;&gt;</th>
+      <th class="name">&lt;code&gt;</th>
       <td class="attribute"></td>
       <td class="code">
-          &lt; > &lt;/ >
+          &lt;code>document.write("ソースコードを表示させる")&lt;/code>
       </td>
       <td class="view">
-        
+        <code>document.write("ソースコードを表示させる")</code>
       </td>
       <td class="supple">
-        
+        改行やインデントを反映させる為にはpreタグの子要素にする<br>preタグを参照
+      </td>
+    </tr>
+
+    <tr>
+      <th class="name">&lt;dd&gt;<br>description , definition<br>説明や定義</th>
+      <td class="attribute"></td>
+      <td class="code">
+        詳細は&lt;dl>タグで。
+      </td>
+      <td class="view">
+        詳細は&lt;dl>タグで。
+      </td>
+      <td class="supple">
+        詳細は&lt;dl>タグで。
       </td>
     </tr>
 
