--- a/index.html
+++ b/index.html
@@ -147,18 +147,18 @@
   
 
     <tr>
-      <th class="name">&lt;div&gt;</th>
+      <th class="name">&lt;div&gt;<br>division</th>
       <td class="attribute"></td>
       <td class="code">
           &lt;div>ブロック要素を形成1&lt;/div>
-          &lt;div>ブロック要素を形成2&lt;/div>
-          &lt;div>ブロック要素を形成3&lt;/div>
+          &lt;div align="center">ブロック要素を形成2&lt;/div>
+          &lt;div align="right">ブロック要素を形成3&lt;/div>
       </td>
       <td class="view">
-        <div>ブロック要素を形成1</div><div>ブロック要素を形成2</div><div>ブロック要素を形成3</div>
+        <div>ブロック要素を形成1</div><div align="center">ブロック要素を形成2</div><div align="right">ブロック要素を形成3</div>
       </td>
       <td class="supple">
-        
+        特に意味を持たないが、ブロック要素を形成できる。spanタグはインライン要素を形成。
       </td>
     </tr>
 
