--- a/index.html
+++ b/index.html
@@ -164,6 +164,26 @@
 
 
     <tr>
+      <th class="name">&lt;dl&gt;<br>description list</th>
+      <td class="attribute"></td>
+      <td class="code">
+          &lt;dl> <br>
+          &lt;dt>dlタグで「説明リスト」の作成&lt;/dt> <br>&lt;dd>dtタグで「説明される言葉」など&lt;/dd> <br>&lt;dd>ddタグで「説明や定義」を書く&lt;/dd> <br>
+          &lt;/dl>
+      </td>
+      <td class="view">
+        <dl>
+          <dt>dlタグで「説明リスト」の作成</dt>
+          <dd>dtタグで「説明される言葉」など</dd>
+          <dd>ddタグで「説明や定義」を書く</dd>
+        </dl>
+      </td>
+      <td class="supple">
+        dlタグの子要素にdtとdd。デーブルと似た感じ。
+      </td>
+    </tr>
+
+    <tr>
       <th class="name">&lt;&gt;</th>
       <td class="attribute"></td>
       <td class="code">
