--- a/index.html
+++ b/index.html
@@ -183,6 +183,22 @@
       </td>
     </tr>
 
+
+    <tr>
+      <th class="name">&lt;dt&gt;<br>description term<br>説明される言葉</th>
+      <td class="attribute"></td>
+      <td class="code">
+        詳細は&lt;dl>タグで。
+      </td>
+      <td class="view">
+        詳細は&lt;dl>タグで。
+      </td>
+      <td class="supple">
+        詳細は&lt;dl>タグで。
+      </td>
+    </tr>
+  
+
     <tr>
       <th class="name">&lt;&gt;</th>
       <td class="attribute"></td>
