--- a/index.html
+++ b/index.html
@@ -200,16 +200,17 @@
   
 
     <tr>
-      <th class="name">&lt;&gt;</th>
+      <th class="name">&lt;em&gt;<br>emphasis</th>
       <td class="attribute"></td>
       <td class="code">
-          &lt; > &lt;/ >
+           HTML5では&lt;em>強勢する&lt;/em>（アクセントを付ける）
       </td>
       <td class="view">
-        
+          HTML5では<em>強勢する</em>（アクセントをつける）
       </td>
       <td class="supple">
-        
+        意味の強勢（アクセント）。<br>
+        イタリック体（斜傾）なら&lt;i>タグ、意味の強意強調が目的なら&lt;strong>タグを使用
       </td>
     </tr>
 
