--- a/index.html
+++ b/index.html
@@ -221,14 +221,14 @@
           &lt;form action="/"><br>
             &lt;fieldset> <br>
               &lt;legend>性別&lt;/legend> <br>
-              &lt;p>&lt;label>&lt;input type="radio" name="sex" value="male">男&lt;/label>&lt;/p>
-              &lt;p>&lt;label>&lt;input type="radio" name="sex" value="female">女&lt;/label>&lt;/p>
-            &lt;/fieldset>
-            &lt;fieldset>
-              &lt;legend>国籍&lt;/legend>
-              &lt;p>&lt;label>&lt;input type="radio" name="nation" value="japan">日本&lt;/label>&lt;/p>
-              &lt;p>&lt;label>&lt;input type="radio" name="nation" value="foreign">海外&lt;/label>&lt;/p>
-            &lt;/fieldset>
+              &lt;p>&lt;label>&lt;input type="radio" name="sex" value="male">男&lt;/label>&lt;/p> <br>
+              &lt;p>&lt;label>&lt;input type="radio" name="sex" value="female">女&lt;/label>&lt;/p> <br>
+            &lt;/fieldset> <br>
+            &lt;fieldset> <br>
+              &lt;legend>国籍&lt;/legend> <br>
+              &lt;p>&lt;label>&lt;input type="radio" name="nation" value="japan">日本&lt;/label>&lt;/p> <br>
+              &lt;p>&lt;label>&lt;input type="radio" name="nation" value="foreign">海外&lt;/label>&lt;/p> <br>
+            &lt;/fieldset> <br>
             &lt;/form>
       </td>
       <td class="view">
