--- a/index.html
+++ b/index.html
@@ -252,6 +252,20 @@
     </tr>
 
     <tr>
+      <th class="name">&lt;form&gt;</th>
+      <td class="attribute">method , action</td>
+      <td class="code">
+          &lt; > &lt;/ >
+      </td>
+      <td class="view">
+        
+      </td>
+      <td class="supple">
+        
+      </td>
+    </tr>
+
+    <tr>
       <th class="name">&lt;&gt;</th>
       <td class="attribute"></td>
       <td class="code">
