--- a/index.html
+++ b/index.html
@@ -312,7 +312,21 @@
     </tr>
 
     <tr>
-      <th class="name">&lt;&gt;</th>
+      <th class="name">&lt;hr&gt;<br>horizontal rule</th>
+      <td class="attribute"></td>
+      <td class="code">
+          &lt;p>horizontal rule&lt;/p>&lt;hr>&lt;p>＝水平線を引ける。&lt;/p>
+      </td>
+      <td class="view">
+        <p>horizontal rule</p><hr><p>＝水平線を引ける。</p>
+      </td>
+      <td class="supple">
+        
+      </td>
+    </tr>
+
+    <tr>
+      <th class="name">&lt;i&gt;</th>
       <td class="attribute"></td>
       <td class="code">
           &lt; > &lt;/ >
