--- a/index.html
+++ b/index.html
@@ -329,13 +329,13 @@
       <th class="name">&lt;i&gt;</th>
       <td class="attribute"></td>
       <td class="code">
-          &lt; > &lt;/ >
+        山路やまみちを登りながら、こう考えた。<br>&lt;i>智ちに働けば角かどが立つ。<br> 情じょうに棹さおさせば流される。<br> 意地を通とおせば窮屈きゅうくつだ。<br> とかくに人の世は住みにくい。&lt;/i>
       </td>
       <td class="view">
-        
+        山路やまみちを登りながら、こう考えた。<i>智ちに働けば角かどが立つ。情じょうに棹さおさせば流される。意地を通とおせば窮屈きゅうくつだ。とかくに人の世は住みにくい。</i>
       </td>
       <td class="supple">
-        
+        心の声など、他と区別したい文や語句に用いる。表示としてはイタリック体（斜傾）になる。
       </td>
     </tr>
 
