--- a/index.html
+++ b/index.html
@@ -340,6 +340,20 @@
     </tr>
 
     <tr>
+      <th class="name">&lt;iframe&gt;<br>inline frame</th>
+      <td class="attribute"></td>
+      <td class="code">
+          &lt; > &lt;/ >
+      </td>
+      <td class="view">
+        
+      </td>
+      <td class="supple">
+        
+      </td>
+    </tr>
+
+    <tr>
       <th class="name">&lt;&gt;</th>
       <td class="attribute"></td>
       <td class="code">
