--- a/index.html
+++ b/index.html
@@ -343,11 +343,11 @@
       <th class="name">&lt;iframe&gt;<br>inline frame</th>
       <td class="attribute"></td>
       <td class="code">
-          &lt; > &lt;/ >
+          &lt;iframe width="280" height="157" src="https://www.youtube.com/embed/wzzD6Y4eqHc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>&lt;/iframe>
       </td>
       <td class="view">
-        
-      </td>
+          <iframe width="280" height="157" src="https://www.youtube.com/embed/wzzD6Y4eqHc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </td>
       <td class="supple">
         
       </td>
