--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
     <tr>
       <th class="name">&lt;iframe&gt;<br>inline frame</th>
-      <td class="attribute"></td>
+      <td class="attribute">width（幅）, height（高さ）, src（そのページのURL）</td>
       <td class="code">
           &lt;iframe width="280" height="157" src="https://www.youtube.com/embed/wzzD6Y4eqHc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>&lt;/iframe>
       </td>
@@ -349,7 +349,8 @@
           <iframe width="280" height="157" src="https://www.youtube.com/embed/wzzD6Y4eqHc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </td>
       <td class="supple">
-        
+        他のページを埋め込むことができる。<br>
+        サザンを愛しています。
       </td>
     </tr>
 
