--- a/index.html
+++ b/index.html
@@ -355,6 +355,20 @@
     </tr>
 
     <tr>
+      <th class="name">&lt;img&gt;<br>imageタグ</th>
+      <td class="attribute">src, alt, title</td>
+      <td class="code">
+          &lt;img src="madrid.jpeg" alt="ロゴ" title="レアルのロゴ" width="100px" height="100px">
+      </td>
+      <td class="view">
+        <img src="madrid.jpeg" alt="ロゴ" title="レアルのロゴ" width="100px" height="100px">
+      </td>
+      <td class="supple">
+        src属性に画像のURLやファイル名を記述して表示させる。
+      </td>
+    </tr>
+
+    <tr>
       <th class="name">&lt;&gt;</th>
       <td class="attribute"></td>
       <td class="code">
