--- a/index.html
+++ b/index.html
@@ -379,11 +379,17 @@
         <form action="/" method="POST">
         <p>text：<input type="text" name="name" size="20" maxlength="18" placeholder="一行のテキスト"></p>
         <p>password：<input type="password" name="pass" size="10" maxlength="8"></p>
+        <p>radio：
+          <input type="radio" name="size" value="large">大
+          <input type="radio" name="size" value="middle">中
+          <input type="radio" name="size" value="small">小
+        </p>
         <input type="submit" value="無効化されてます" disabled>
       </form>
       </td>
       <td class="supple">
         formタグ内で利用します。
+        複数行の文章を記入させたい場合はinput:text ではなく、textareタグを用いる。
       </td>
     </tr>
 
