--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     </tr>
 
     <tr>
-      <th class="name">&lt;&gt;</th>
+      <th class="name">&lt;label&gt;</th>
       <td class="attribute"></td>
       <td class="code">
           
