--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
         部品名をクリックしても反応すると思います。<br>
         以下の方法でフォーム内の部品とラベルを関連づけることができる。<br>
         ①for属性名と部品のid属性名を一致させる（名前のとこ）<br>
-        ②labelタグにフォーム部品を入れ子にする（）<br>
+        ②labelタグにフォーム部品を入れ子にする（年齢）<br>
       </td>
     </tr>
 
