--- a/index.html
+++ b/index.html
@@ -436,6 +436,21 @@
     </tr>
 
     <tr>
+      <th class="name">&lt;legend&gt;</th>
+      <td class="attribute"></td>
+      <td class="code">
+          
+      </td>
+      <td class="view">
+        
+      </td>
+      <td class="supple">
+        fieldsetタグ内のキャプション（タイトルや説明）ができる。<br>
+        fieldsetタグの説明を参照してください。
+      </td>
+    </tr>
+
+    <tr>
       <th class="name">&lt;&gt;</th>
       <td class="attribute"></td>
       <td class="code">
