--- a/index.html
+++ b/index.html
@@ -451,6 +451,21 @@
     </tr>
 
     <tr>
+      <th class="name">&lt;li&gt;</th>
+      <td class="attribute"></td>
+      <td class="code">
+          
+      </td>
+      <td class="view">
+        
+      </td>
+      <td class="supple">
+        リストを作成します。<br>
+        olタグ、liタグを参照してください。
+      </td>
+    </tr>
+
+    <tr>
       <th class="name">&lt;&gt;</th>
       <td class="attribute"></td>
       <td class="code">
