--- a/index.html
+++ b/index.html
@@ -466,6 +466,28 @@
     </tr>
 
     <tr>
+      <th class="name">&lt;ol&gt;</th>
+      <td class="attribute"></td>
+      <td class="code">
+          &lt;ol>
+            &lt;li>松&lt;/li>
+            &lt;li>竹&lt;/li>
+            &lt;li>梅&lt;/li>
+          &lt;/ol>
+      </td>
+      <td class="view">
+        <ol>
+          <li>松</li>
+          <li>竹</li>
+          <li>梅</li>
+        </ol>
+      </td>
+      <td class="supple">
+        「順序のあるリスト」を作成する。<br>「順序のないリスト」はulタグ
+      </td>
+    </tr>
+
+    <tr>
       <th class="name">&lt;&gt;</th>
       <td class="attribute"></td>
       <td class="code">
@@ -478,28 +500,7 @@
         
       </td>
     </tr>
-
-    <tr>
-      <th class="name">&lt;ol&gt;</th>
-      <td class="attribute"></td>
-      <td class="code">
-          &lt;li>
-            &lt;ol>松&lt;/ol>
-            &lt;ol>竹&lt;/ol>
-            &lt;ol>梅&lt;/ol>
-          &lt;/li>
-      </td>
-      <td class="view">
-        <li>
-          <ol>松</ol>
-          <ol>竹</ol>
-          <ol>梅</ol>
-        </li>
-      </td>
-      <td class="supple">
-        liタグの中で、「順序のあるリスト」を作成する。<br>「順序のないリスト」はulタグ
-      </td>
-    </tr>
+  
 
     <tr>
       <th class="name">&lt;&gt;</th>
@@ -519,21 +520,21 @@
       <th class="name">&lt;ul&gt;</th>
       <td class="attribute"></td>
       <td class="code">
-          &lt;li>
-            &lt;ul>桜&lt;/ul>
-            &lt;ul>すみれ&lt;/ul>
-            &lt;ul>ひまわり&lt;/ul>
-          &lt;/li>
+          &lt;ul>
+            &lt;li>桜&lt;/li>
+            &lt;li>すみれ&lt;/li>
+            &lt;li>ひまわり&lt;/li>
+          &lt;/ul>
       </td>
       <td class="view">
-        <li>
-          <ul>桜</ul>
-          <ul>すみれ</ul>
-          <ul>ひまわり</ul>
-        </li>
+        <ul>
+          <li>桜</li>
+          <li>すみれ</li>
+          <li>ひまわり</li>
+        </ul>
       </td>
       <td class="supple">
-        liタグの中で「順序のないリスト」を作る。<br>「順序のあるリスト」はolタグ。
+        「順序のないリスト」を作る。<br>「順序のあるリスト」はolタグ。
       </td>
     </tr>
 
