--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
     </tr>
 
     <tr>
-      <th class="name">&lt;&gt;</th>
+      <th class="name">&lt;optgroup&gt;</th>
       <td class="attribute"></td>
       <td class="code">
 
