--- a/index.html
+++ b/index.html
@@ -518,7 +518,8 @@
           </p>
       </td>
       <td class="supple">
-
+        selectタグとoptionタグによって作成される選択肢を、さらにグループに分けて細分化することができます。<br>
+        label属性は必須でグループの名称を。disabled属性は、そのグループを選択不可にすることができます。
       </td>
     </tr>
   
