--- a/index.html
+++ b/index.html
@@ -591,6 +591,24 @@
       </td>
     </tr>
 
+
+    <tr>
+        <th class="name">
+          &lt;p&gt;<br>Paragraphタグ
+        </th>
+        <td class="attribute"></td>
+        <td class="code">
+          &lt;p&gt;段落を構成します。&lt;/p&gt;&lt;p&gt;自動的に改行されます。&lt;/p&gt;
+        </td>
+        <td class="view">
+          <p>段落を構成します。</p>
+          <p>自動的に改行されます。</p>
+        </td>
+        <td class="supple">
+  
+        </td>
+      </tr>
+
     <tr>
       <th class="name">&lt;&gt;</th>
       <td class="attribute"></td>
@@ -627,22 +645,6 @@
       </td>
     </tr>
 
-    <tr>
-      <th>
-        &lt;p&gt;<br>Paragraphタグ
-      </th>
-      <td></td>
-      <td>
-        &lt;p&gt;段落を構成します。&lt;/p&gt;&lt;p&gt;自動的に改行されます。&lt;/p&gt;
-      </td>
-      <td>
-        <p>段落を構成します。</p>
-        <p>自動的に改行されます。</p>
-      </td>
-      <td>
-
-      </td>
-    </tr>
   </table>
 
 </html>
