--- a/index.html
+++ b/index.html
@@ -630,7 +630,8 @@
         </code></pre>
       </td>
       <td class="supple">
-        
+        半角スペースや改行が、そのまま反映されます。<br>
+        codeタグと組み合わせて用いることで、例えばWordPressなどのブログ記事でソースコードを表示させることができます。
       </td>
     </tr>
 
