--- a/index.html
+++ b/index.html
@@ -656,7 +656,8 @@
         
       </td>
       <td class="supple">
-        
+        引用句、引用文であることを表す。<br>ブラウザでは「 」や”　”で表されることが多いが、その表記を目的に用いることは不適切。<br>
+        cite属性に引用元のURLを指定するが、作品のタイトルを表すciteタグと混同しないよう注意。
       </td>
     </tr>
 
