--- a/index.html
+++ b/index.html
@@ -725,7 +725,8 @@
         
       </td>
       <td class="supple">
-        
+        divのブロックレベル要素に対して、spanはインライン要素となる。<br>
+        それ自体に意味は持たないが、例のように属性との組み合わせで工夫ができ便利。
       </td>
     </tr>
 
