--- a/css-sheet.html
+++ b/css-sheet.html
@@ -7,10 +7,10 @@
   <title>css のチートシート</title>
 </head>
 <body>
-  <h1>必要なもの</h1>
+  <h1>CSS のポイントとして必要なもの</h1>
   <ul>
     <li>セレクタ</li>
-    <li></li>
+    <li>プロパティ</li>
   </ul>
 </body>
 </html>
